deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: test-app
spec:
    replicas: 1
    selector:
        matchLabels:
            app: test-app
    template:
        metadata:
            labels:
                app: test-app
        spec:
            containers:
                - name: test-app
                  image: imrezaulkrm/test-app:22
                  ports:
                      - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
    name: test-app-service
spec:
    selector:
        app: test-app
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
